2015-01-13  Dmitry Antipov  <dmantipov@yandex.ru>

	Add DEFUN attributes.
	* callint.c (Finteractive):
	* character.c (Fcharacterp, Fmax_char):
	* data.c (Feq, Fnull, Fconsp, Fatom, Flistp, Fnlistp, Fsymbolp)
	(Fstringp, Fchar_or_string_p, Fintegerp, Fnatnump, Fnumberp)
	(Ffloatp, Fbyteorder):
	* decompress.c (Fzlib_available_p):
	* fns.c (Fidentity):
	* frame.c (Fframe_windows_min_size):
	* gnutls.c (Fgnutls_error_p, Fgnutls_available_p):
	* window.c (Fwindow__sanitize_window_sizes):
	* xdisp.c (Ftool_bar_height):
	* xfaces.c (Fface_attribute_relative_p): Add const attribute.
	* emacs.c (Fkill_emacs):
	* eval.c (Fthrow):
	* keyboard.c (Ftop_level, Fexit_recursive_edit)
	(Fabor_recursive_edit): Add noreturn attribute.

	* search.c (fast_string_match_internal): New function,
	consolidated from...
	(fast_string_match, fast_string_match_ignore_case): ...functions
	which are...
	* lisp.h (fast_string_match, fast_string_match_ignore_case):
	inlined from here now.
	(fast_string_match_internal): Add prototype.
	* dired.c (file_name_completion): Use fast_string_match_internal.

2015-01-12  Paul Eggert  <eggert@cs.ucla.edu>

	Port to 32-bit MingGW --with-wide-int
	Problem reported by Eli Zaretskii in:
	http://lists.gnu.org/archive/html/emacs-devel/2015-01/msg00265.html
	* lisp.h (struct Lisp_Sub_Char_Table): Check that offset matches
	what we think it is, rather than checking only its alignment (and
	doing so incorrectly on MinGW).

2015-01-12  Dmitry Antipov  <dmantipov@yandex.ru>

	* fileio.c (Ffile_name_as_directory, Fdirectory_file_name):
	Remove dead NILP check.
	* image.c (Flookup_image): Use regular format for docstring.
	* keyboard.c (apply_modifiers_uncached): Use stpcpy.

2015-01-12  Martin Rudalics  <rudalics@gmx.at>

	* dispnew.c (change_frame_size_1): Pass Qchange_frame_size to
	adjust_frame_size.
	* frame.c (frame_default_tool_bar_height): New variable.
	(adjust_frame_size): Possibly add requested adjustment to
	Vframe_adjust_size_history.